refactor: eta 로직 가독성 개선