@@ -14,18 +14,16 @@ import com.ody.member.domain.Member;
 import com.ody.route.domain.RouteTime;
 import com.ody.route.service.RouteService;
 import com.ody.util.DistanceCalculator;
-import java.time.LocalDateTime;
-import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor
 public class EtaService {
 
-    private static final long ODSAY_CALL_CYCLE_MINUTES = 10L;
+    private static final long ROUTE_CLIENT_CALL_CYCLE_MINUTES = 10L;
     private static final int ARRIVED_THRESHOLD_METER = 300;
 
     private final RouteService routeService;
@@ -40,51 +38,42 @@ public class EtaService {
     public MateEtaResponses findAllMateEtas(MateEtaRequest mateEtaRequest, Long meetingId, Member member) {
         Mate requestMate = findByMeetingIdAndMemberId(meetingId, member.getId());
         Meeting meeting = requestMate.getMeeting();
-        LocalDateTime meetingTime = meeting.getMeetingTime().withSecond(0).withNano(0);
         Eta mateEta = findByMateId(requestMate.getId());
-        LocalDateTime now = LocalDateTime.now().withSecond(0).withNano(0);
 
         if (mateEtaRequest.isMissing()) {
             mateEta.updateRemainingMinutes(-1L);
         }
 
-        if (determineArrived(mateEtaRequest, meeting, now)) {
+        if (determineArrived(mateEtaRequest, meeting) && !isNullCoordinates(mateEtaRequest)) {
             mateEta.updateArrived();
         }
-
-        if ((!mateEta.isArrived() && isOdysayCallTime(mateEta)) &&
-                !(mateEtaRequest.currentLatitude() == null || mateEtaRequest.currentLongitude() == null)) {
-            Location currentLocation = new Location(
-                    "서울",
-                    mateEtaRequest.currentLatitude(),
-                    mateEtaRequest.currentLongitude()
-            );
+        if ((!mateEta.isArrived() && isRouteClientCallTime(mateEta)) && !isNullCoordinates(mateEtaRequest)) {
+            Location currentLocation = new Location(mateEtaRequest.currentLatitude(), mateEtaRequest.currentLongitude());
             RouteTime routeTime = routeService.calculateRouteTime(currentLocation, meeting.getTarget());
             mateEta.updateRemainingMinutes(routeTime.getMinutes());
         }
 
-        List<MateEtaResponse> mateEtaResponses = etaRepository.findAllByMeetingId(meetingId).stream()
-                .map(eta -> MateEtaResponse.of(requestMate.getNicknameValue(), eta, mateEtaRequest.isMissing(), meetingTime, now))
-                .toList();
-        return new MateEtaResponses(requestMate.getNicknameValue(), mateEtaResponses);
+        return etaRepository.findAllByMeetingId(meetingId).stream()
+                .map(eta -> MateEtaResponse.of(eta, meeting))
+                .collect(Collectors.collectingAndThen(
+                        Collectors.toList(),
+                        mateEtaResponses -> new MateEtaResponses(requestMate.getNicknameValue(), mateEtaResponses))
+                );
     }
 
-    private boolean isOdysayCallTime(Eta mateEta) {
-        return !mateEta.isModified() || mateEta.differenceMinutesFromLastUpdated() >= ODSAY_CALL_CYCLE_MINUTES;
+    private boolean isNullCoordinates(MateEtaRequest mateEtaRequest) {
+        return mateEtaRequest.currentLatitude() == null || mateEtaRequest.currentLongitude() == null;
     }
 
-    private boolean determineArrived(MateEtaRequest mateEtaRequest, Meeting meeting, LocalDateTime now) {
-        LocalDateTime meetingTime = meeting.getMeetingTime().withSecond(0).withNano(0);
-        if (mateEtaRequest.currentLatitude() == null || mateEtaRequest.currentLongitude() == null) {
-            return false;
-        }
+    private boolean isRouteClientCallTime(Eta mateEta) {
+        return !mateEta.isModified() || mateEta.differenceMinutesFromLastUpdated() >= ROUTE_CLIENT_CALL_CYCLE_MINUTES;
+    }
+
+    private boolean determineArrived(MateEtaRequest mateEtaRequest, Meeting meeting) {
         double distance = DistanceCalculator.calculate(
-                Double.valueOf(mateEtaRequest.currentLatitude()),
-                Double.valueOf(mateEtaRequest.currentLongitude()),
-                Double.valueOf(meeting.getTarget().getLatitude()),
-                Double.valueOf(meeting.getTarget().getLongitude())
+                new Location(mateEtaRequest.currentLatitude(), mateEtaRequest.currentLongitude()), meeting.getTarget()
         );
-        return distance <= ARRIVED_THRESHOLD_METER && (now.isBefore(meetingTime) || now.isEqual(meetingTime));
+        return distance <= ARRIVED_THRESHOLD_METER && !meeting.isEnd();
     }
 
     private Mate findByMeetingIdAndMemberId(Long meetingId, Long memberId) {
